<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LandingActivity">

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#50000000"
        android:gravity="center"
        android:hint="@string/strEml"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/field_email"
        android:background="#50000000"
        android:gravity="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:hint="@string/strPswd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/field_password"
        android:layout_marginTop="10dp"
        android:background="#50000000"
        android:gravity="center"
        android:hint="@string/strName"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:id="@+id/field_contact"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/field_name"
        android:background="#50000000"
        android:gravity="center"
        android:hint="@string/strContact"
        android:inputType="text|number"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:id="@+id/field_language"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/field_contact"
        android:background="#50000000"
        android:gravity="center"
        android:hint="@string/strLanguage"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/button_sign_up"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:text="@string/strLgn"
        android:textAllCaps="@bool/allCaps"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/field_language"
        android:layout_marginTop="10dp"
        android:text="@string/strReg"
        android:textAllCaps="@bool/allCaps"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</RelativeLayout>